--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Javascript</h1>
 
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
+  <script src="condition.js"></script>
 </body>
 </html>
