--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -9,6 +9,7 @@
     <h1>Javascript</h1>
 
   <!-- <script src="script.js"></script> -->
-  <script src="condition.js"></script>
+  <!-- <script src="condition.js"></script> -->
+  <script src="js/loops.js"></script>
 </body>
 </html>
