--- a/Learn HTML/forms/form.html
+++ b/Learn HTML/forms/form.html
@@ -8,10 +8,50 @@
   <body>
     <h1>form</h1>
     <form method="POST">
-      <p>UserName: <input type="text" name="username"   maxlength="4" placeholder="example@gmail.com"/></p>
-      <p>Password: <input type="password" name="password" size="4"  maxlength="4"/></p>
+      <p>
+        UserName:
+        <input
+          type="text"
+          name="username"
+          maxlength="4"
+          placeholder="example@gmail.com"
+        />
+      </p>
+      <p>
+        Password:
+        <input type="number" name="password" size="4" maxlength="4" />
+      </p>
       <p>Enter Your Bio:</p>
-      <textarea name="bio" cols="20" rows="10" placeholder="My name is ali"></textarea>
+      <textarea
+        name="bio"
+        cols="20"
+        rows="10"
+        placeholder="My name is ali"
+      ></textarea>
+      <p>
+        Gender
+        <input type="radio" name="gender" value="male" checked />Male
+        <input type="radio" name="gender" value="female" checked />Female
+      </p>
+      <p>
+        Favourite Fruit
+        <input type="checkbox" name="fruits" value="mango" checked />Mango
+        <input
+          type="checkbox"
+          name="fruits"
+          value="banan"
+          checked="checked"
+        />Banan <input type="checkbox" name="fruits" value="stw" checked />Stw
+      </p>
+      <p>Your City</p>
+      <select name="City" id="" size="3" multiple>
+        <option value="" >Choose Your City</option>
+        <option value="fsd">FSD</option>
+        <option value="isb">ISB</option>
+        <option value="lhr" selected>LHR</option>
+      </select>
+      <br>
+      <input type="file" name="" id="" placeholder="enter your file">
     </form>
   </body>
 </html>
