--- a/Learn HTML/table/table.html
+++ b/Learn HTML/table/table.html
@@ -6,7 +6,28 @@
     <title>Table</title>
   </head>
   <body>
-    <h1>Student Details</h1>
+    <h1>Student Details &#60;</h1>
+    <video
+      src="/typing.com3.mp4"
+      poster="../assets/car.jpg"
+      width="1000"
+      height="300"
+      preload
+      controls
+      loop
+    >
+      <p>A video of a puppy playing in the snow</p>
+    </video>
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube-nocookie.com/embed/M--g3h7YLxM?si=d7qeHcM6jXkcx7Gs"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+    ></iframe>
+    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/M--g3h7YLxM?si=d7qeHcM6jXkcx7Gs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
     <!-- <table border="1">
       <tr>
         <th>Name</th>
