--- a/Learn CSS/text/text.html
+++ b/Learn CSS/text/text.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style/text.css" />
     <title>Document</title>
+    <style>
+      h1{
+        float: right;
+      }
+    </style>
   </head>
   <body>
+    <h1>hello</h1>
+    <button class="btn">hello world</button>
     <h1 class="heading">hello</h1>
     <h2>Computer:</h2>
     <p class="para">
@@ -22,16 +29,36 @@
       aspernatur, laboriosam illum a quod dicta consequuntur praesentium. Ipsum,
       obcaecati!
     </p>
-
+    <ol>
+      <li>
+        hello 1
+        <ul>
+          <li>hello</li>
+        </ul>
+      </li>
+      <li>hello 2</li>
+      <li>hello 3</li>
+    </ol>
     <div class="spanDiv">
+      <p>hello</p>
       <span class="span">hello span</span>
       <span>helllo 2</span>
       <span>helllo 2</span>
       <span>helllo 2</span>
       <span>helllo 2</span>
       <a href="#" class="link">hello link</a>
-    </div>
-    <a href="#" class="link">hello link</a>
+    </div> 
+    <!-- <a class="linkTesting">hello</a>
+    <a href="https://www.youtube.com/" target="_blank" class="linkTesting">hello link</a>
+    <a href="https://www.google.com/" target="_blank" class="linkTesting">hello link2</a>
+    <a href="https://www.facebook.com/" target="_blank" class="linkTesting">hello link3</a>
+    <a href="https://www.instagram.com/" target="_blank" class="linkTesting">hello link4</a>
+    <a href="https://www.idm.com/" target="_blank" class="linkTesting">hello link5</a> -->
+
+    <input type="text" name="simpleText" id="" class="textInput" />
+    <p class="para1">para 1</p>
+    <p>para 2</p>
+    <p class="para3">para 3</p>
     <!-- <div class="spanDiv">
         <img src="../assets/car.jpg" class="imageDetails" alt="car image" height="200px" width="200px">
         <em >This is car image</em>
@@ -43,6 +70,5 @@
             </td>
         </tr>
     </table> -->
-    
   </body>
 </html>
