--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javasript</title>
-    
   </head>
   <body>
     <h1>javascript</h1>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="conditions.js"></script>
   </body>
 </html>
