--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>javascript</h1>
     <!-- <script src="script.js"></script> -->
-    <script src="conditions.js"></script>
+    <!-- <script src="conditions.js"></script> -->
+    <script src="loop.js"></script>
   </body>
 </html>
