--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -9,6 +9,7 @@
     <h1>javascript</h1>
     <!-- <script src="script.js"></script> -->
     <!-- <script src="conditions.js"></script> -->
-    <script src="loop.js"></script>
+    <!-- <script src="loop.js"></script> -->
+    <script src="array.js"></script>
   </body>
 </html>
