--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="script.js"></script> -->
     <!-- <script src="conditions.js"></script> -->
     <!-- <script src="loop.js"></script> -->
-    <script src="array.js"></script>
+    <!-- <script src="array.js"></script> -->
+    <script src="number.js"></script>
   </body>
 </html>
