--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -58,15 +58,19 @@
       onMouseout="src='bike.jpg'"
       width="230"
     /> -->
-    <form>
-      <label>user name</label>
-      <input
-        type="text"
-        placeholder="enter user name"
-        onchange="this.style.color='green'"
-      />
-    </form>
+    <!-- <form> -->
+    <!-- Email:
+    <input type="text" id="email" /> -->
+    <!-- <input type="password" id="password" /> -->
+    <!-- <button onclick="getInputValue('email')">submit</button> -->
+    IP:<br />
+    <input type="text" id="zip" onBlur="fillCity();" /><br />
+    City:<br />
+    <input type="text" id="city" disabled/>
+
+    <!-- </form> -->
     <!-- <scripteve src="number.js"></scripteve> -->
-    <script src="events.js"></script>
+    <!-- <script src="events.js"></script> -->
+    <script src="form.js"></script>
   </body>
 </html>
