--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -35,6 +35,16 @@
       font-weight: 500;
       color: pink;
     }
+    a {
+      color: red;
+      cursor: pointer;
+    }
+    .para-dark {
+      background-color: blue;
+      color: white;
+      padding: 10px;
+      font-size: 19px;
+    }
   </style>
   <body>
     <h1>javascript</h1>
@@ -63,11 +73,24 @@
     <input type="text" id="email" /> -->
     <!-- <input type="password" id="password" /> -->
     <!-- <button onclick="getInputValue('email')">submit</button> -->
-    IP:<br />
+    <!-- IP:<br />
     <input type="text" id="zip" onBlur="fillCity();" /><br />
     City:<br />
-    <input type="text" id="city" disabled/>
-
+    <input type="text" id="city" disabled /> -->
+    <!-- <p id="para">
+      To make your document look professionally produced, Word provides header,
+      footer, cover page, and text box designs that complement each other. For
+      example, you can add a matching cover page, header, and sidebar.
+      <a onclick="readMore();">read more</a>
+    </p> -->
+    <!-- <p onclick="addList()">show list</p>
+    <div id="myFavBooks"></div> -->
+    <p>hello</p>
+    <p>hello1</p>
+    <p>hello2</p>
+    <p>hello3</p>
+    <p>hello4</p>
+    <button onclick="selectPara()">select all p</button>
     <!-- </form> -->
     <!-- <scripteve src="number.js"></scripteve> -->
     <!-- <script src="events.js"></script> -->
