aj hmnay dom ko parha hay

--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -47,6 +47,17 @@
     }
   </style>
   <body>
+    <div id="mainDiv" onclick="dom()">
+      <div>
+        <p>hello</p>
+        <p>hello1</p>
+        <p>hello2</p>
+        <p>hello3</p>
+        <p>hello4</p>
+        <p>para 1</p>
+        <p>para 2</p>
+      </div>
+    </div>
     <h1>javascript</h1>
     <!-- <a onclick="alert('hello')"> say hello </a> -->
     <!-- <script src="script.js"></script> -->
@@ -85,15 +96,12 @@
     </p> -->
     <!-- <p onclick="addList()">show list</p>
     <div id="myFavBooks"></div> -->
-    <p>hello</p>
-    <p>hello1</p>
-    <p>hello2</p>
-    <p>hello3</p>
-    <p>hello4</p>
-    <button onclick="selectPara()">select all p</button>
+
+    <!-- <button onclick="selectPara()">select all p</button> -->
     <!-- </form> -->
     <!-- <scripteve src="number.js"></scripteve> -->
     <!-- <script src="events.js"></script> -->
-    <script src="form.js"></script>
+    <!-- <script src="form.js"></script> -->
+    <script src="dom.js"></script>
   </body>
 </html>
