--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -45,9 +45,14 @@
       padding: 10px;
       font-size: 19px;
     }
+    .para {
+      background-color: red;
+      font-size: 20px;
+      color: white;
+    }
   </style>
   <body>
-    <div id="mainDiv" onclick="dom()">
+    <!-- <div id="mainDiv" onclick="dom()">
       <div>
         <p>hello</p>
         <p>hello1</p>
@@ -58,7 +63,27 @@
         <p>para 2</p>
       </div>
     </div>
-    <h1>javascript</h1>
+    <h1>javascript</h1> -->
+    <!-- <div>
+      <input
+        type="number"
+        name="number1"
+        id="number1"
+        placeholder="Please enter first number"
+      />
+      <input
+        type="number"
+        name="number2"
+        id="number2"
+        placeholder="Please enter first number"
+      />
+      <button onclick="showGreaterNumber()">Submit</button>
+      <p id="ans"></p>
+    </div> -->
+
+    <div id="parentDiv">
+    </div>
+    <button onclick="sendMessage()">Submit</button>
     <!-- <a onclick="alert('hello')"> say hello </a> -->
     <!-- <script src="script.js"></script> -->
     <!-- <script src="conditions.js"></script> -->
