--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -80,9 +80,8 @@
       <button onclick="showGreaterNumber()">Submit</button>
       <p id="ans"></p>
     </div> -->
-
-    <div id="parentDiv">
-    </div>
+    <!-- adding elements -->
+    <div id="parentDiv"></div>
     <button onclick="sendMessage()">Submit</button>
     <!-- <a onclick="alert('hello')"> say hello </a> -->
     <!-- <script src="script.js"></script> -->
@@ -127,6 +126,7 @@
     <!-- <scripteve src="number.js"></scripteve> -->
     <!-- <script src="events.js"></script> -->
     <!-- <script src="form.js"></script> -->
-    <script src="dom.js"></script>
+    <!-- <script src="dom.js"></script> -->
+    <script src="object.js"></script>
   </body>
 </html>
