--- a/LearnJavascript/index.html
+++ b/LearnJavascript/index.html
@@ -127,6 +127,13 @@
     <!-- <script src="events.js"></script> -->
     <!-- <script src="form.js"></script> -->
     <!-- <script src="dom.js"></script> -->
+    <h1 id="home-heading"></h1>
+    <button onclick="goFarword()">go farword--></button>
+
+    <button onclick="goToHome('/about.html','home-heading')">
+      go to about page
+    </button>
+    <script src="browser.js"></script>
     <script src="object.js"></script>
   </body>
 </html>
